
2011-02-16  Tom Hacohen (TAsn)

	* Dropped Evas_Encoding and moved to use Eina_unicode_utf8 instead.
	* Started showing the unicode replacement character instead of missing
	  glyphs.

2011-02-20  Carsten Haitzler (The Rasterman)

	* Fix bug in font string parsing that can result in a crash if a
	  font element is long enough.
	* Fix convert rgba8888 -> a8 bug so it wont crash.

2011-02-21  Carsten Haitzler (The Rasterman)

	* Fixed bug with memory access of old utf8 string when
	  comparing prev and cur state with text obj.

2011-02-22  Tom Hacohen (TAsn)

	* Fixed a bug in textblock cursor position with empty textblocks.

2011-02-22  Carsten Haitzler (The Rasterman)

	* Fixed bug smart calc array where it'd nuke the array when nested
	  process calls hapen and leave some objects uncalculated, but
	  removed from the array and marked as needing a calc thus never
	  getting back into the array.

2011-02-27  Vincent Torri

	* Fixed static linking of the bmp, wbmp and tga loaders

2011-03-07  Mike Blumenkrantz

        * Fix segv when trying to set gl viewpoint with NULL ctx

2011-03-08  Carsten Haitzler (The Rasterman)

	* Fix problem with different x vsync api between SGI and EXT flavor
        as they have the same base name, but different prototypes
        * Add evas_object_ref() and evas_object_unref() to defer
        deletion of objects until all references are removed

2011-03-09  Carsten Haitzler (The Rasterman)

	* Fix bug with evas_object_del() calling DEL callback BEFORE
        the HIDE one.

2011-03-10  Sung W. Park

	* Fix bug with yinvert handling of native surfaces.

2011-03-10  Carsten Haitzler (The Rasterman)

	* Fix issue with loading alpha BMP's with "check if all pixel alpha
        are 0 or not and then force alpha off if all are 0". This
        means you can never have a 100% empty/transparent BMP though
        in 32bpp mode.

2011-03-11  Carsten Haitzler (The Rasterman)

	* Add ICO loader to evas (also can load CUR cursor files in theory)